--- a/javascript/package.json
+++ b/javascript/package.json
@@ -1,10 +1,28 @@
 {
   "dependencies": {
+    "@jest/globals": "^30.0.5",
     "axios": "^1.11.0",
     "axios-mock-adapter": "^2.1.0",
     "axios-retry": "^4.5.0",
     "jest": "^30.0.5",
     "uuid": "^11.1.0",
     "winston": "^3.17.0"
+  },
+  "scripts": {
+    "test": "jest",
+    "test:coverage": "jest --coverage",
+    "test:watch": "jest --watchAll"
+  },
+  "jest": {
+    "rootDir": "."
+  },
+  "type": "module",
+  "name": "nws-api-wrapper",
+  "version": "1.0.0",
+  "main": "nws_api.js",
+  "devDependencies": {
+    "@babel/cli": "^7.28.3",
+    "@babel/core": "^7.28.3",
+    "@babel/preset-env": "^7.28.3"
   }
 }
